--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" href="css/theme/black.css">
 
 		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
+		<!--<link rel="stylesheet" href="lib/css/zenburn.css">-->
+		<link rel="stylesheet" href="lib/css/dracula.css">	
+		<!--<link rel="stylesheet" href="lib/css/monokai.css">	 -->
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -20,12 +22,24 @@
 			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
 			document.getElementsByTagName( 'head' )[0].appendChild( link );
 		</script>
+		
+		<script>
+			$(function() {
+				var includes = $('[data-include]');
+				jQuery.each(includes, function() {
+					var file = $(this).data('include');
+					$(this).load(file);
+				});
+			});
+		</script>
 	</head>
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<!--<section>Slide 1</section>-->
+				<!--<section>Slide 2</section>-->
+				<section data-markdown="best_practices/test_markdown.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
+				<section data-markdown="best_practices/test_slide2.md" data-separator="^\n---\n" data-separator-notes="^NOTES:"></section>
 			</div>
 		</div>
 
