--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Theme used for syntax highlighting of code -->
 		<!--<link rel="stylesheet" href="lib/css/zenburn.css">-->
-		<link rel="stylesheet" href="lib/css/dracula.css">	
+		<link rel="stylesheet" href="lib/css/dracula.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -23,15 +23,15 @@
 		</script>
 
 		<!-- Left alignment -->
-		<style>
-			.reveal .slides {
-				text-align: left;
-			}
-			.reveal .slides section>* {
-				margin-left:  0;
-				margin-right: 0;
-			}
-		</style>
+		<!--<style>-->
+			<!--.reveal .slides {-->
+				<!--text-align: left;-->
+			<!--}-->
+			<!--.reveal .slides section>* {-->
+				<!--margin-left:  0;-->
+				<!--margin-right: 0;-->
+			<!--}-->
+		<!--</style>-->
 
 	</head>
 	<body>
@@ -39,9 +39,46 @@
 			<div class="slides">
 				<!--<section data-markdown="best_practices/test_markdown.md" data-separator="^\n-&#45;&#45;\n" data-separator-notes="^NOTES:"></section>-->
 				<!--<section data-markdown="best_practices/test_slide2.md"   data-separator="^\n-&#45;&#45;\n" data-separator-notes="^NOTES:"></section>-->
-				<section data-markdown="best_practices/core_guidelines.md"></section>
-				<section data-markdown="best_practices/optimization.md"></section>
-				<section data-markdown="best_practices/undefined_behavior.md"></section>
+
+				<section data-markdown="best_practices/00_introduction.md"></section>
+
+				<section data-markdown="best_practices/01_core_guidelines.md"></section>
+
+				<section data-markdown="best_practices/02_optimization.md"></section>
+
+				<section data-markdown="best_practices/03_undefined_behavior.md"></section>
+
+				<section data-markdown="best_practices/04_variable_declaration.md"></section>
+
+				<section data-markdown="best_practices/05_correct_types.md"></section>
+				<section data-markdown="best_practices/05_correct_types_02.md"></section>
+
+
+				<section data-markdown="/best_practices/06_const.md"></section>
+
+				<section data-markdown="/best_practices/07_initializer_lists.md"></section>
+
+				<!-- consider section about order of evaluation here 20.1 -->
+
+				<section data-markdown="/best_practices/08_raw_pointers.md"></section>
+
+				<!-- consider section about optional here 23.1 -->
+
+				<section data-markdown="/best_practices/09_special_member_functions.md"></section>
+				<section data-markdown="/best_practices/09_special_member_functions_02.md"></section>
+
+				<!-- consider section about stack objects here 27.1 -->
+
+				<section data-markdown="/best_practices/automatic_conversions.md"></section>
+
+				<!-- consider section about variadic constructors objects here 29.1 -->
+
+				<section data-markdown="/best_practices/initializer_lists_for_literals.md"></section>
+
+				<section data-markdown="/best_practices/containers.md"></section>
+
+
+
 			</div>
 		</div>
 
