Fix broken page links

--- a/index.html
+++ b/index.html
@@ -54,28 +54,28 @@
 				<section data-markdown="best_practices/05_correct_types_02.md"></section>
 
 
-				<section data-markdown="/best_practices/06_const.md"></section>
+				<section data-markdown="best_practices/06_const.md"></section>
 
-				<section data-markdown="/best_practices/07_initializer_lists.md"></section>
+				<section data-markdown="best_practices/07_initializer_lists.md"></section>
 
 				<!-- consider section about order of evaluation here 20.1 -->
 
-				<section data-markdown="/best_practices/08_raw_pointers.md"></section>
+				<section data-markdown="best_practices/08_raw_pointers.md"></section>
 
 				<!-- consider section about optional here 23.1 -->
 
-				<section data-markdown="/best_practices/09_special_member_functions.md"></section>
-				<section data-markdown="/best_practices/09_special_member_functions_02.md"></section>
+				<section data-markdown="best_practices/09_special_member_functions.md"></section>
+				<section data-markdown="best_practices/09_special_member_functions_02.md"></section>
 
 				<!-- consider section about stack objects here 27.1 -->
 
-				<section data-markdown="/best_practices/automatic_conversions.md"></section>
+				<section data-markdown="best_practices/automatic_conversions.md"></section>
 
 				<!-- consider section about variadic constructors objects here 29.1 -->
 
-				<section data-markdown="/best_practices/initializer_lists_for_literals.md"></section>
+				<section data-markdown="best_practices/initializer_lists_for_literals.md"></section>
 
-				<section data-markdown="/best_practices/containers.md"></section>
+				<section data-markdown="best_practices/containers.md"></section>
 
 
 
